--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,7 +10,7 @@
 
   --gray-50: #f7f8fa;
   --gray-100: #e6e8eb;
-  --gray-200: #afb2b1;
+  --gray-200: #a0a1a8;
   --gray-500: #808080;
   --gray-800: #494d4b;
 
