--- a/src/components/Filter/styles.module.scss
+++ b/src/components/Filter/styles.module.scss
@@ -1,13 +1,15 @@
-.filterContainer {
-  display: flex;
+.container {
+  display: grid;
+  grid-template-columns: 2fr repeat(6, 1fr);
   border-bottom: 1px solid var(--gray-200);
-  padding: 1rem 6rem;
-  font-size: 0.9rem;
+  font-size: 1.1rem;
   color: var(--primary-800);
+  margin: 1rem 0.5rem;
+  gap: 0.5rem;
 
   .formGroup {
-    padding: 0.5rem;
-  
+    margin: 1rem auto;
+
     label {
       display: flex;
       float: top;
@@ -26,47 +28,56 @@
       line-height: 1.1;
       border: 2px solid var(--gray-200);
       color: var(--gray-800);
+      box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.9);
+    }
+
+    input[type="date"] {
+      height: 2.9rem;
     }
 
     .formLocation {
-      width: 14rem;
+      width: 17rem;
     }
 
-    .formPrice,
-    .formInput {
+    input,
+    .formPrice {
       width: 9rem;
     }
 
-    .searchButton {
+    button {
       display: flex;
       align-items: center;
       justify-content: center;
-      margin-bottom: 0.4rem;
-      background: linear-gradient(#fb5448, #e23537);
+      background: var(--secondary-500);
       color: var(--white);
-      border: 2px solid #fb5448;
+      border: 2px solid var(--secondary-500);
       border-radius: 0.7rem;
-      font-weight: 600;
+      font-weight: 500;
       font-size: 1.15rem;
       padding: 0.6rem 1rem;
       width: 7rem;
-      transition: all 0.8s;
-    }
+      transition: filter 0.2s;
+      box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.9);
 
-    .searchButton:hover {
-      background: linear-gradient(#e23537, #fb5448);
-      border: 2px solid #e23537;
+      &:hover {
+        filter: brightness(0.9);
+      }
     }
 
     .moreFilters {
       font-weight: 600;
-      color: #e23537;
+      color: var(--secondary-800);
       cursor: pointer;
       margin-bottom: 1rem;
       font-size: 1.15rem;
+      transition: filter 0.2s;
+
+      &:hover {
+        filter: brightness(0.9);
+      }
     }
 
-    &:nth-last-child(-n+2) {
+    &:nth-last-child(-n + 2) {
       display: flex;
       align-items: flex-end;
     }
