--- a/src/pages/properties/home.module.scss
+++ b/src/pages/properties/home.module.scss
@@ -1,12 +1,13 @@
 .homepage {
   color: #272727;
+  background: var(--white);
 
-  .sectionContainer {
-    background: var(--white);
+  .titleContainer {
     height: 6.5rem;
     display: flex;
     align-items: center;
-    padding: 1rem 6rem;
+    justify-content: space-between;
+    padding: 1rem 1.5rem;
     color: var(--gray-800);
 
     .titleSection {
@@ -20,36 +21,43 @@
       }
     }
 
-    .filterButton {
-      margin-left: auto;
-      text-transform: capitalize;
+    button {
+      border-radius: 0.7rem;
+      padding: 0.7rem 1rem;
+      cursor: pointer;
+      background-color: var(--white);
+      border: 2px solid var(--gray-100);
+      transition: filter 0.2s;
 
-      button {
-        border-radius: 0.7rem;
-        padding: 0.7rem 1rem;
-        cursor: pointer;
-        background-color: var(--white);
-        border: 2px solid var(--gray-100);
+      &:hover {
+        filter: brightness(0.9);
       }
     }
   }
 
   .cardContainer {
-    padding: 1rem 6rem;
+    padding: 1rem 1.5rem;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-column-gap: 2.25rem;
-    grid-row-gap: 2.25rem;
+    grid-column-gap: 3rem;
+    grid-row-gap: 3rem;
 
     .propertyCard {
       .imgContainer {
         position: relative;
+        cursor: pointer;
+        transition: filter 0.2s;
+
+        &:hover {
+          filter: brightness(0.8);
+        }
 
         .iconCard {
           position: absolute;
           display: flex;
           bottom: 12px;
           left: 12px;
+          gap: 0.5rem;
 
           div {
             background: var(--white);
@@ -59,10 +67,6 @@
             align-items: center;
             font-size: 1.6rem;
             padding: 0.15rem;
-
-            &:last-child {
-              margin-left: 0.5rem;
-            }
           }
         }
 
@@ -71,13 +75,13 @@
           border-radius: 1.5rem;
           height: 8.5rem;
           object-fit: cover;
-          cursor: pointer;
         }
       }
 
       .cardHeader {
         display: flex;
         margin: 1rem 0.3rem;
+        justify-content: space-between;
 
         div {
           display: flex;
@@ -90,7 +94,6 @@
         }
 
         span {
-          margin-left: auto;
           display: flex;
           justify-content: center;
           align-items: center;
@@ -100,19 +103,15 @@
       }
 
       .cardBody {
-        margin: 0 0.3rem;
+        margin: auto 0.3rem;
 
         .price {
           display: flex;
           border-bottom: 2px solid var(--gray-100);
           margin-bottom: 0.5rem;
           font-size: 1.1rem;
-
-          span {
-            &:last-child {
-              margin-left: auto;
-            }
-          }
+          justify-content: space-between;
+          align-items: center;
         }
 
         .totalPrice {
@@ -143,7 +142,6 @@
               }
 
               p {
-                text-transform: lowercase;
                 margin-left: 0.2rem;
               }
             }
